# StarBotExecutor

./: LICENSE  README.md  pyproject.toml
starbot_executor/: __init__.py
starbot_executor/core/: executor.py
tests/: test_executor.py
