[tool.poetry]
name = "starbot-executor"
version = "1.3.0"
description = "一个基于订阅发布模式的异步执行器"
keywords = ["starbot", "async", "executor"]
license = "MIT"
authors = ["Starlwr <lwr1104@qq.com>"]
readme = "README.md"
repository = "https://github.com/Starlwr/StarBotExecutor"
packages = [{ include = "starbot_executor" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
